A good deal of cleanup

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -620,237 +620,6 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	font-family: 'source_sans_probold';
 }
 
-#keypad {
-	background-color: #dd8728;
-	margin-bottom: 0;
-}
-
-#keypad ul li:first-child label {
-	font-family: 'source_sans_probold';
-	color: #9c210c;
-	font-size: 15px;
-	font-size: 0.9375rem;
-	font-weight: bolder;
-	text-transform: capitalize;
-	border-bottom: none;
-	width: 76px;
-	width: 4.75rem;
-	margin: 0 auto;
-	position: relative;
-}
-
-#keypad ul li:first-child label::after,
-#position ul .inOut .columns::after {
-	/*content: ' ';*/
-	height: 0;
-	position: absolute;
-	width: 0;
-	border: 8px solid transparent;
-	border: 0.5em solid transparent;
-	border-left-width: 6px;
-	border-left-width: 0.375em;
-	border-right-width: 6px;
-	border-right-width: 0.375em;
-}
-
-#keypad.hidden ul li:first-child label::after{
-	border-top-color: #9c210c;
-	bottom: 3px;
-	bottom: 0.1875em;
-	right: 0;
-}
-
-#keypad:not(.hidden) ul li:first-child label::after{
-	border-bottom-color: #9c210c;
-	bottom: 11px;
-	bottom: 0.6875em;
-	right: 0;
-}
-
-#keypad .axis { 
-	height: 144px;
-	height: 9rem;
-}
-
-#keypad .axis button:focus {
-	/*
-	outline: none !important;
-	*/
-}
-
-#keypad .axis button {
-	position: absolute;
-	width: 40px;
-	width: 2.5rem;
-	height: 40px;
-	height: 2.5rem;
-	padding: 0;
-	margin: 0;
-	border-radius: 20px;
-	border-radius: 1.25rem;
-	background-color: #fff;
-}
-
-#keypad .axis .button::before, #keypad .axis .button::after  {
-	content: ' ';
-	height: 0;
-	position: absolute;
-	width: 0;
-	border: 14px solid transparent;
-	border: 0.875rem solid transparent; /* arrow size */
-}
-
-#keypad .axis .button-minus-X {
-	left: 16px;
-	left: 1rem;
-	top: 52px;
-	top: 3.25rem;
-}
-
-#keypad .axis .button-minus-X::before {
-	border-right-color: #9c210c;  /* arrow color */
-	border-top-width: 10px;
-	border-top-width: 0.625rem;
-	border-bottom-width: 10px;
-	border-bottom-width: 0.625rem;
-	position: absolute;
-	left: -4px;
-	left: -0.25rem;
-	top: 10px;
-	top: 0.625rem;
-}
-
-#keypad .axis .button-plus-X {
-	left: 88px;
-	left: 5.5rem;
-	bottom: 52px;
-	bottom: 3.25rem;
-}
-
-#keypad .axis .button-plus-X::before {
-	border-left-color: #9c210c;  /* arrow color */
-	border-top-width: 10px;
-	border-top-width: 0.625rem;
-	border-bottom-width: 10px;
-	border-bottom-width: 0.625rem;
-	position: absolute;
-	right: -4px;
-	right: -0.25rem;
-	top: 10px;
-	top: 0.625rem;
-}
-
-#keypad .axis .button-minus-Y {
-	bottom: 16px;
-	bottom: 1rem;
-	left: 52px;
-	left: 3.25rem;
-}
-
-#keypad .axis .button-minus-Y::before {
-	border-top-color: #9c210c;  /* arrow color */
-	border-left-width: 10px;
-	border-left-width: 0.625rem;
-	border-right-width: 10px;
-	border-right-width: 0.625rem;
-	position: absolute;
-	bottom: -4px;
-	bottom: -0.25rem;
-	left: 10px;
-	left: 0.625rem
-}
-
-#keypad .axis .button-plus-Y {
-	top: 16px;
-	top: 1rem;
-	left: 52px;
-	left: 3.25rem;
-}
-
-#keypad .axis .button-plus-Y::before {
-	border-bottom-color: #9c210c;  /* arrow color */
-	border-left-width: 10px;
-	border-left-width: 0.625rem;
-	border-right-width: 10px;
-	border-right-width: 0.625rem;
-	position: absolute;
-	top: -4px;
-	top: -0.25rem;
-	left: 10px;
-	left: 0.625rem;
-}
-
-#keypad .axis .button-minus-Z {
-	bottom: 24px;
-	bottom: 1.5rem;
-	right: 16px;
-	right: 1rem;
-}
-
-#keypad .axis .button-minus-Z::before {
-	border-top-color: #9c210c;  /* arrow color */
-	border-left-width: 20px;
-	border-left-width: 0.625rem;
-	border-right-width: 20px;
-	border-right-width: 0.625rem;
-	position: absolute;
-	bottom: -4px;
-	bottom: -0.25rem;
-	left: 10px;
-	left: 0.625rem
-}
-
-
-#keypad .axis .button-plus-Z {
-	top: 24px;
-	top: 1.5rem;
-	right: 16px;
-	right: 1rem;
-}
-
-#keypad .axis .button-plus-Z::before {
-	border-bottom-color: #9c210c;  /* arrow color */
-	border-left-width: 20px;
-	border-left-width: 0.625rem;
-	border-right-width: 20px;
-	border-right-width: 0.625rem;
-	position: absolute;
-	top: -4px;
-	top: -0.25rem;
-	left: 20px;
-	left: 0.625rem
-}
-
-#speedwheelLabel {
-	position: relative;
-	bottom: -10px;
-	font-size: 1.1em;
-	font-weight: 300;
-	font-family: 'source_sans_proextralight';
-	display: none;
-}
-
-
-
-
-/*Test Trackpad*/
-#keypad.trackpad #trackpad-zone {
-	background: #00DB41; /* Old browsers */
-	background: -moz-linear-gradient(top,  #00DB41 0%, #15D648 100%) !important; /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#00DB41), color-stop(100%,#15D648)) !important; /* Chrome,Safari4+ */
-	background : -webkit-linear-gradient(top, #00DB41 0%, #15D648 100%) !important; /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top,  #00DB41 0%,#15D648 100%) !important; /* Opera 11.10+ */
-	background: -ms-linear-gradient(top,  #00DB41 0%,#15D648 100%) !important; /* IE10+ */
-	background: linear-gradient(to bottom,  #00DB41 0%,#15D648 100%) !important; /* W3C */
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00DB41', endColorstr='#15D648',GradientType=0 ) !important; /* IE6-9 */
-}
-
-#trackpad-zone {
-	width: 100%;
-	height: 200px;
-	height: 12.5rem;
-}
-
 #job-info ul li:first-child label {
 	background-color: #aaa;
 	text-align: center;
@@ -924,6 +693,13 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	height: 100%;
 	display: none;
 }
+
+#spinner-container {
+	width: 100%;
+	height: 100%;
+	display: none;
+}
+
 
 .app-icon {
 	width: 100px;
