--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -44,9 +44,8 @@ body,html{
 	color: #9c210c;
 }
 
-.main-section, .app-section{ 
+.main-section, .app-section, .spinner-section { 
 	height: auto;
-	
 }
 
 .off-canvas-wrap, .inner-wrap {
@@ -697,7 +696,6 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 #spinner-container {
 	width: 100%;
 	height: 100%;
-	display: none;
 }
 
 
