--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1174,6 +1174,42 @@ ul#loadbar li:first-child {
 	 font-family: 'source_sans_proextralight'; 
 }
 
+.load_container {
+    width: 190px;
+	float: right;
+	margin-top: -2.5px;
+	margin-right: 15px;
+	display: none;
+}
+.load_container .loading_bar {
+    float: left;
+    background-color: #444444;
+    width: 150px;
+    height: 20px;
+    border-radius: 5px;
+    box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5) inset,
+        0px 0.3px 0px 0px rgba(200, 200, 200, 0.5);
+
+}
+.loading_bar .horizontal_fill {
+    background-color: #5DA423;
+    position: relative;
+    height: 18.5px;
+    width: 10%;
+    top: 1px;
+    left: 1px;
+    border-radius: 5px;
+    box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.5) inset,
+        0px 0.1px 0px 0px rgba(200, 200, 200, 0.5);
+	transition: all 1s;
+}
+.percent_comp {
+	float: right;
+    top: 1.9px;
+	font-size: 15px;
+	color: #F0F0F0;
+	font-family: 'source_sans_proextralight';
+}
 
 /* ********** Page (#modal_container) container ********** */
 #modal_container {
