--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -72,7 +72,7 @@ h1, h2, h3, h4, h5, h6 {
 } 
  
 td.details-control {
-    background: url('images/details_open.png') no-repeat center center;
+    
     width: 50px;
     cursor: pointer;
 }
@@ -82,7 +82,7 @@ td.actions-control {
     cursor: pointer;
     content: attr('Preview Job');
     text-align: center;
-    
+
 }
 
 td.preview-control {
@@ -92,13 +92,39 @@ td.preview-control {
     content: attr('Preview Job');
 }
 
+.more-details {
+  
+  width: 36px;
+  height: 36px;
+  color: #A6A6A6;
+  vertical-align: text-top;
+  border: 1px solid #A6A6A6;
+  border-radius: 100%;
+  float: left;
+  text-align: center;
+  transform-origin: center;
+}
+.more-details:hover {
+   border-color: #666;
+   color: #666;
+   transition: all .3s;
+}
+.more-details div {
+  position: relative;
+  top: 5.5px;
+  font-family: "Lucida Console", Monaco, monospace;
+  font-size: 1.7em;
+  transform-origin: center;
+  transition: transform .5s, color .3s;
+}
+
 .ellipses {
   font-size: 1.5em;
   width: 1.7em;
   height: 1.7em;
-  color: #dddddd;
+  color: #A6A6A6;
   vertical-align: text-top;
-  border: 1px solid #dddddd;
+  border: 1px solid #A6A6A6;
   border-radius: 100%;
   line-height: 1em;
   float: right;
@@ -165,7 +191,7 @@ td.preview-control {
   display: none;
 }
 tr.shown td.details-control {
-    background: url('images/details_close.png') no-repeat center center;
+    background-color: #D23334;
     width: 40px;
 }
 
