--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -125,7 +125,7 @@ td.preview-control {
 }
 
 .ellipses {
-  font-size: 1.5em;
+  font-size: 1.35em;
   width: 1.7em;
   height: 1.7em;
   color: #A6A6A6;
@@ -133,7 +133,8 @@ td.preview-control {
   border: 1px solid #A6A6A6;
   border-radius: 100%;
   line-height: 1em;
-  float: right;
+  float: left;
+  margin-left: 0.7em;
 }
 
 .ellipses:hover {
@@ -145,9 +146,9 @@ td.preview-control {
 .dropDown {
   position: absolute;
   top: inherit;
-  right: 7px;
+  left: 7px;
   width: 175px;
-  margin-top: 3.4em;
+  margin-top: 3.1em;
   text-align: left;
   background-color: #ffffff;
   padding-top: 1.5em;
@@ -169,10 +170,10 @@ td.preview-control {
 .commentBox{
   position: absolute;
   top: inherit;
-  right: 20px;
+  left: 33px;
   width: 1em;
   height: 1em;
-  margin-top: 2.9em;
+  margin-top: 2.6em;
   transform: translatex(2.1em);
   background-color: #ffffff;
   -ms-transform: rotate(45deg); /* IE 9 */
