--- a/dashboard/apps/network_manager.fma/css/style.css
+++ b/dashboard/apps/network_manager.fma/css/style.css
@@ -12,11 +12,21 @@ table.dataTable thead .sorting_desc {
     background : none;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 td.details-control {
     background: url('images/details_open.png') no-repeat center center;
     width: 40px;
     cursor: pointer;
 }
+
 tr.shown td.details-control {
     background: url('images/details_close.png') no-repeat center center;
     width: 40px;
