Remove duplicate networks.  Fix appearance of rows in network manager

--- a/dashboard/apps/network_manager.fma/css/style.css
+++ b/dashboard/apps/network_manager.fma/css/style.css
@@ -19,6 +19,7 @@ table.dataTable thead .sorting_desc {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    cursor: pointer;
 }
 
 td.details-control {
