--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1242,3 +1242,26 @@ ul#loadbar li:first-child {
 
 .fabmo-status-idle { color: blue; }
 .fabmo-status-disconnected { color: gray; }
+
+.keypad {
+	border-radius: 10px;
+	width: 200px;
+	height: 60px;
+	margin: 10px;
+	outline: none;
+	background-color: red;
+	border: 2px solid #550000;
+	color: white;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	cursor: pointer;
+}
+
+.keypadEnabled {
+	background-color: green;
+}
+
+.keypadDisabled {
+	background-color: red;
+}
