--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -17,7 +17,10 @@ body {
   color: blue;
 }
 
-#dropzone { 
+.dropzone.blink { 
+  -webkit-box-shadow: 0px 0px 10px 2px rgba(237,67,55,1);
+    -moz-box-shadow: 0px 0px 10px 2px rgba(237,67,55,1);
+      box-shadow: 0px 0px 10px 2px rgba(237,67,55,1);
 }
 
 #dropzone .hovershow {
@@ -773,6 +776,11 @@ td.edit span{
     border-radius: 50%;
 	float: right;
 	margin-right: 50px;
+}
+@media screen and (max-width: 630px){
+  .radial_progress{
+    margin-right: 10px;
+  }
 }
 
 .fill {
