some fixes to job manager

--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -84,6 +84,10 @@ h1, h2, h3, h4, h5, h6 {
 .jobs-title:first-child {
   min-height: 40px;
 }
+
+.jobs-title{
+  overflow: hidden;
+}
  .up-next{
    position: absolute;
    left: -200px;
