scroll fix test

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -679,10 +679,13 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 /* ********** Icon apps grid ********** */
 
 #app-client-container {
+	-webkit-overflow-scrolling: touch;
+  	overflow-y: scroll;
 	width: 100%;
 	height: 100%;
 	display: none;
 	transition: all 0.5s;
+	
 }
 
 #spinner-container {
