--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -100,11 +100,16 @@ h1, h2, h3, h4, h5, h6 {
    left: -200px;
    font-weight: bold;
    transition: all 0.5s;
+
  }
  .without-job{
    position: absolute;
-   float:left;
-   display:none;
+   left: -400px;
+ }
+ 
+ .jobs-wrapper{
+   height: auto;
+   overflow: hidden;
  }
  .nextJobTitle{
    display:none;
@@ -185,7 +190,7 @@ td.preview-control {
 }
 .nextJobDesc {
   max-height: 80px;
-  overflow: hidden;
+
 }
 
 .ellipses {
